Fix submit button alignment on settings pages

--- a/frontend/src/styles/pages/Settings.module.scss
+++ b/frontend/src/styles/pages/Settings.module.scss
@@ -56,7 +56,7 @@
   }
 }
 
-.formButton {
+.submitButton {
   width: 100%;
 
   @media screen and (min-width: 43.75rem) {
